@@ -222,6 +222,11 @@ class pts_test_execution
 				{
 					//$test_result_std_output = pts_client::shell_exec($test_run_command, $test_extra_runtime_variables);
 					$descriptorspec = array(0 => array('pipe', 'r'), 1 => array('pipe', 'w'), 2 => array('pipe', 'w'));
+
+					if(getenv('XAUTHORITY'))
+					{
+						$test_extra_runtime_variables['XAUTHORITY'] = getenv('XAUTHORITY');
+					}
 					$test_process = proc_open('exec ' . $execute_binary_prepend . './' . $execute_binary . ' ' . $pts_test_arguments . ' 2>&1', $descriptorspec, $pipes, $to_execute, array_merge($_ENV, pts_client::environmental_variables(), $test_extra_runtime_variables));
 
 					if(is_resource($test_process))
