@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+pts-core: Ensure XAUTHORITY gets passed if relevant to test execution
+
 Phoronix Test Suite 7.4.0 Milestone 3
 28 August
 
